setup/Istio/virtual_services/01_virtual-service-grafana-mutual.yaml
---
# Metrics visualization | Pre-built dashboards for Istio metrics
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-mutual
  namespace: observability
spec:
  hosts:
  - "grafana.${K8S_ENVIRONMENT}.slainte.at"
  gateways:
  - istio-gateways/slainte-at
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kube-prom-stack-grafana
        port:
          number: 80
---
