setup/Istio/virtual_services/01_virtual-service-jaeger-mutual.yaml
---
# Distributed tracing | Traces request paths across services 
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jaeger-mutual
  namespace: istio-system
spec:
  hosts:
  - "jaeger.${K8S_ENVIRONMENT}.slainte.at"
  gateways:
  - istio-gateways/slainte-at
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jaeger-collector
        port:
          number: 14268
---
