setup/Istio/virtual_services/01_virtual-service-prometheus-mutual.yaml
---
# Metrics collection & storage | Scrapes metrics from Envoy, Istio, applications
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prometheus-mutual
  namespace: observability
spec:
  hosts:
  - "prometheus.${K8S_ENVIRONMENT}.slainte.at"
  gateways:
  - istio-gateways/slainte-at
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-operated 
        port:
          number: 9090
---
