setup/Istio/virtual_services/01_virtual-service-zipkin-mutual.yaml
---
# Zipkin provides the necessary visibility to debug and optimize performance
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: zipkin-mutual
  namespace: istio-system
spec:
  hosts:
  - "zipkin.${K8S_ENVIRONMENT}.slainte.at"
  gateways:
  - istio-gateways/slainte-at
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: zipkin
        port:
          number: 9411
---
